header and experience

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,10 @@
-<header class="flex justify-between items-center py-3 w-[1120 px]">
-    <img
-        class="rounded-full w-12 h-12"
-        src="https://pbs.twimg.com/profile_images/1073108634194841602/7AgJtFgB_400x400.jpg"
-        alt="Alexander photo"
-    />
+<header class="flex justify-center items-center py-6 w-[1120px] mx-auto">
 
     <nav class="flex flex-row gap-x-10 opacity-80">
-        <a href="/">Inicio</a>
-        <a href="/Experience">Experiencia</a>
-        <a href="/Projects">Proyectos</a>
-        <a href="/About">Sobre mí</a>
-        <a href="/Contact">Contacto</a>
+        <a href="#top">Inicio</a>
+        <a href="#experience">Experiencia</a>
+        <a href="#projects">Proyectos</a>
+        <a href="#about">Sobre mí</a>
+        <a href="#contact">Contacto</a>
     </nav>
 </header>
