--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,12 +12,15 @@ import Header  from "../components/Header.astro"
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Alexander Caballero - Portafolio"</title>
 	</head>
+
 	<body>
+		<div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
 		<Header />
 		<slot />
 	</body>
+
 </html>
 
 <style is:global>
@@ -26,11 +29,19 @@ import Header  from "../components/Header.astro"
 	}
 	html {
 		font-family: 'Hubot Sans Variable', system-ui,  sans-serif;
+		scroll-behavior: smooth;
 	}
 	body {
+		
 		background: #0b0b0d;
 		display: flex;
-		justify-content: center;
-		height: 100vh;
+		flex-direction: column;
+		min-height: 100vh;
+	}
+
+	@media (prefers-reduced-motion: reduce) {
+		html {
+			scroll-behavior: auto;
+		}
 	}
 </style>
