--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,12 +31,12 @@ import SectionContainer from "../components/SectionContainer.astro";
 				</a>
 			</h1>
 
-			<h2 class="text-2xl opacity-80 text-wrap">
+			<h2 class="text-2xl opacity-80 text-pretty">
 				Ingeniero de Software recién egresado, con habilidades mixtas de
 				<span class="text-orange-400"
-					>Data Science, Desarrollo WEB y Mobile
+					>Data Science, Desarrollo WEB y Mobile.
 				</span>
-				. De Lima, Perú.
+				De Lima, Perú.
 			</h2>
 
 			<nav class="flex gap-x-4 mt-8">
@@ -58,7 +58,7 @@ import SectionContainer from "../components/SectionContainer.astro";
 		</SectionContainer>
 
 		<SectionContainer id="experience">
-			<h2 class="text-3xl font-semibold text-orange-400/90 mb-6 flex gap-x-3 tems-center">
+			<h2 class="text-3xl font-semibold text-white/90 mb-6 flex gap-x-3 tems-center">
 				<BriefcaseIcon class="size-8"/>
 				Experiencia Laboral
 			</h2>
