--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -9,17 +9,17 @@ const { title, description, date, link } = Astro.props;
 ---
 
 <div
-    class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+    class="absolute w-3 h-3 bg-orange-500/90 rounded-full mt-1.5 -start-1.5 border border-white/90 dark:border-gray-900 dark:bg-orange-700"
 >
 </div>
 <time
-    class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+    class="mb-1 text-sm font-semibold leading-none text-gray-300 dark:text-gray-500"
     >{date}</time
 >
-<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+<h3 class="text-lg font-semibold text-orange-400/90 dark:text-white mt-2">
     {title}
 </h3>
-<p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
+<p class="mb-4 text-base font-normal text-gray-400 dark:text-gray-200 text-pretty">
     {description}
 </p>
 
@@ -27,9 +27,9 @@ const { title, description, date, link } = Astro.props;
     link && (
         <a
             href={link}
-            class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+            class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-orange-500 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-orange-500 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
         >
-            Saber más
+            Saber más ...
             <svg
                 class="w-3 h-3 ms-2 rtl:rotate-180"
                 aria-hidden="true"
