--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import '@fontsource-variable/hubot-sans';
 
 import Header  from "../components/Header.astro"
-
+import Footer from '../components/Footer.astro';
 ---
 
 <!doctype html>
@@ -19,6 +19,7 @@ import Header  from "../components/Header.astro"
 		<div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 
 </html>
