--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -19,7 +19,9 @@ const { title, description, date, link } = Astro.props;
 <h3 class="text-lg font-semibold text-orange-400/90 dark:text-white mt-2">
     {title}
 </h3>
-<p class="mb-4 text-base font-normal text-gray-400 dark:text-gray-200 text-pretty">
+<p
+    class="mb-4 text-base font-normal text-gray-400 dark:text-gray-200 text-pretty"
+>
     {description}
 </p>
 
@@ -27,7 +29,13 @@ const { title, description, date, link } = Astro.props;
     link && (
         <a
             href={link}
-            class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-orange-500 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-orange-500 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+            class="bg-white/5 
+            border border-white/10 rounded-full
+            inline-flex justify-center items-center gap-x-2
+            py-1 px-2 md:py-2 md:px-4
+            text-xs md:text-base
+            transition
+            hover:scale-110 hover:bg-white/10"
         >
             Saber más ...
             <svg
